  user is allowed to use the nas_admin page. nasdb is used to shorten the nas list to only
  a few specific entries. That way administrator responsible for a few access servers will
  only be able to administer those access servers and not see the rest of the nas list.
* Add username searching in the find page as suggested by joram agten
* Don't use nas_list in nas_admin
Ver 1.70:
* Add the /bin postgresql compatibility patch from Guy Fraser
* Add ldap_userdn as a configuration directive. If set we use that for
  user DN's (variables supported) instead of performing and ldap search for
  each user. That can be somewhat faster.
* Add a check_user_passwd() and a get_user_dn() functions in lib/ldap/functions.php3
* Add general_restrict_badusers_access directive. If set to yes we only allow each administrator
  access to their own entries in the badusers table
* Add a username.mappings table. We are able to map each administrator username to additional queries
  on the accounting and user settings tables.
* Add an sql_accounting_extra_query directive. If set this query is included in all
  queries to the accounting tables.
  Combined with admin username mappings we are able to easily restrict access on specific accounting data
  to each administrator.
* Escape bad characters in the $login variable
* Add a da_sql_escape_string function. We use that for every element we pass to sql queries in order to
  protect ourselves from sql injection.
* Use the ldap_userdn directive where applicable in the functions.php3 file
* Add an sql_xlat function
* Add a nas administration page for sql based clients
* Fix small bugs in accounting.php3 and user_stats.php3. Add nas_admin.php3 to the buttons page
* Add da_sql_escape_string for all relevant variables in lib/sql files
* Keep the nas list in a separate array $nas_list. Update various pages to use that one now.
* Make nas_list actually work
* Also allow for '-' to exist in a nas name in bin/log_badlogins

Ver 1.68: